# ai4prod

./: .gitignore  .gitmodules  CMakeLists.txt  ChangeLog.md  Dipendenze.txt  README.md  Readme.md  aiproductionConfig.cmake.in  install.sh  installWin.bat  install_insideDocker.sh  main.cpp  vcpkg.json
Linux/: .gitignore
Linux/cpu/: CMakeLists.txt  Readme.md  main.cpp
Utils/: Readme.md
aiproduction/: CMakeLists.txt  classification.cpp  classification.h  define.h  modelInterface.h  objectdetection.cpp  objectdetection.h  utils.cpp  utils.h
aiproduction/include/: classification.h  customDataType.h  defines.h  instancesegmentation.h  modelInterface.h  objectdetection.h  posedetection.h  poseestimation.h  semanticsegmentation.h  utils.h
aiproduction/src/: classification.cpp  instancesegmentation.cpp  objectdetection.cpp  posedetection.cpp  poseestimation.cpp  semanticsegmentation.cpp  utils.cpp
example/: Readme.md
example/Aarch64/classification/: Readme.md  classification.cpp
example/Linux/: CMakeLists.txt  main.cpp
example/Linux/classification/: CMakeLists.txt  Readme.md  classification.cpp  main.cpp
example/Linux/instance_segmentation/: CMakeLists.txt  instance_segmentation.cpp
example/Linux/object_detection/: CMakeLists.txt  main.cpp
example/Windows/: CMakeLists.txt  Readme.md  main.cpp
example/Windows/OnnxTestVisualStudios/: OnnxTestVisualStudios.sln
example/Windows/classification/: CMakeLists.txt  Readme.md  classification.cpp
example/Windows/objectdetection/: CMakeLists.txt  objectdetection.cpp
example/classification/: CMakeLists.txt  Readme.md  classification.cpp
example/classification/CustomModel/: CMakeLists.txt  customModel.cpp
example/classification/ImageNet/: CMakeLists.txt  classification.cpp
example/instance_segmentation/: CMakeLists.txt  instance_segmentation.cpp
example/object_detection/: CMakeLists.txt  main.cpp
example/pose_detection/: CMakeLists.txt  main.cpp
example/pose_estimation/: main.cpp
extra/Explain/: CMakeLists.txt
extra/Explain/include/: explain.h  explain_export.h
extra/Explain/src/: explain.cpp
onnxConversion/Yolov3/: ConvertDarknetToOnnx.py  models.py  requirements.txt
onnxConversion/Yolov3/utils/: utils.py
sample/Windows/: Readme.md  main.cpp
test/: classification.cpp  testClassification.cpp  testInstanceSegmentation.cpp  testObjectDetection.cpp  testPoseDetection.cpp
testAccuracy/classification/Imagenet/: convertToOnnx.py
testAccuracy/classification/Imagenet/Cpp/: CMakeLists.txt  testImagenet.cpp
testAccuracy/classification/Imagenet/Cpp/Linux/: CMakeLists.txt  testImagenet.cpp
testAccuracy/classification/Imagenet/Cpp/Windows/: CMakeLists.txt  testImagenet.cpp
testAccuracy/classification/Imagenet/Python/: README.md  VerifyAccuracyTrainedModel.py  classifier_inference_lighting.py  classifier_inference_onnx_ONLYFORTEST.py  convertImagenet-Label.py  findAccuracy.py
testAccuracy/instanceSegmentation/TestCoco/: Readme.md  get2014Val.sh  get2017.sh
testAccuracy/instanceSegmentation/TestCoco/Cpp/: CMakeLists.txt  testCoco.cpp
testAccuracy/instanceSegmentation/TestCoco/Cpp/Linux/: testCoco.cpp
testAccuracy/instanceSegmentation/TestCoco/python/: Coco2017.py
testAccuracy/objectDetection/: Readme.md
testAccuracy/objectDetection/TestCoco/Cpp/: CMakeLists.txt  testCoco.cpp
testAccuracy/objectDetection/TestCoco/Cpp/Linux/: testCoco.cpp
testAccuracy/objectDetection/TestCoco/Cpp/Windows/: testCoco.cpp
testAccuracy/objectDetection/TestCoco/python/: Coco2017.py
